--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "payment-bot",
   "version": "1.0.0",
   "description": "This bot will be for taking payment on chain by tg",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "dev": "nodemon --exec ts-node src/index.ts"
   },
   "author": "vishwa vivek yadav",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.8.6",
     "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1"
+    "ethers": "5.7",
+    "mongoose": "^7.6.3",
+    "nodemon": "^3.0.1",
+    "telegraf": "^4.14.0",
+    "telegram-typings": "^5.0.0",
+    "typescript": "^5.2.2"
   }
 }
