--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^20.8.6",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "ethers": "5.7",
     "mongoose": "^7.6.3",
