--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGODB_URL=mongodb+srv://vishu842301:vishu842301@cluster0.ftwqjfi.mongodb.net/
 PROVIDER_URL=https://delicate-long-diagram.bsc-testnet.discover.quiknode.pro/87e82c46a87393cb4ab36142b771d5b5969b3b4f/
 OWNER_ADDRESS=0xa35fed7062873f43247Dcb67e71A4Eefd9964Cb3
 ENCRYPTION_KEY=macroman-is-the-best-superheross
+PORT=8080
