--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "ethers": "5.7",
     "express": "^4.18.2",
+    "grammy": "^1.19.2",
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1",
     "telegraf": "^4.14.0",
